<resources>
    <string name="app_name">Retrofit_ApiRest</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="phone_note_app">Phone Note App</string>
    <string name="nome">Nome</string>
    <string name="icone_delete">icone delete</string>
    <string name="nome_usuario">Milton Filho</string>
    <string name="meu_fone">(48)99629-1731</string>
    <string name="update_content">Atualizar contato</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter Phone</string>
</resources>