<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/update_content"
        android:textSize="30sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edtNomeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/edtNumeroUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_phone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="5dp"
        android:text="@string/salvar" />

</LinearLayout>