<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtNomeApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_note_app"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="30sp"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="text"
        android:hint="@string/nome"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/edtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/numero"
        android:inputType="number"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/salvar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

</LinearLayout>